fix table height create empty pages fix text fields does not wrap on long spaceless text. added npm install to service make

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -45,5 +45,6 @@ h1 {
     overflow: hidden;
     transition: none;
     z-index: 1;
+    height: auto !important;
   }
 }
